# Pukoban-Solver

./: CMakeLists.txt  README.md  main.cpp
libs/: CMakeLists.txt  directions.cpp  directions.h  grid.cpp  grid.h  node.h  pieces.h  position.cpp  position.h  position_hash.cpp  position_hash.h  state.cpp  state.h  state_astar_comparator.cpp  state_astar_comparator.h  state_comparator.cpp  state_comparator.h  state_gfs_comparator.cpp  state_gfs_comparator.h  state_hash.cpp  state_hash.h
libs/tests/: CMakeLists.txt  directions_unit_tests.cpp  grid_unit_tests.cpp  node_unit_tests.cpp  position_hash_unit_tests.cpp  position_unit_tests.cpp  state_astar_comparator_unit_tests.cpp  state_gfs_comparator_unit_tests.cpp  state_hash_unit_tests.cpp  state_unit_tests.cpp
puzzles/: puzzle_1.txt  puzzle_2.txt  puzzle_3.txt  puzzle_4.txt  puzzle_5.txt  puzzle_6.txt  puzzle_7.txt  puzzle_8.txt  puzzle_9.txt
puzzles/solutions/astar/: .out  puzzle_2.txt.out  puzzle_3.txt.out  puzzle_4.txt.out  puzzle_5.txt.out  puzzle_6.txt.out  puzzle_7.txt.out  puzzle_8.txt.out
puzzles/solutions/bfs/: puzzle_1.txt.out
puzzles/solutions/dfs/: puzzle_1.txt.out
puzzles/solutions/gfs/: puzzle_1.txt.out  puzzle_2.txt.out  puzzle_3.txt.out  puzzle_4.txt.out  puzzle_5.txt.out  (+3 more)
puzzles/testers/: multiple_robots.txt  no_box.txt  no_robot.txt  no_storage.txt  not_possible.txt  unequal_storage_box.txt
solutions/astar/: puzzle_5.solution  puzzle_6.solution
solutions/bfs/: puzzle_7.solution
solutions/dfs/: puzzle_7.txt.out
solutions/gfs/: puzzle_5.solution  puzzle_6.solution  puzzle_7.solution
